@@ -1,10 +1,13 @@
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = src examples include
-# SUBDIRS += bin tests
+SUBDIRS = src examples include doc
+# TODO: re-add bin tests
 
-# TODO: Make this somehow?
-# dist_pkgdata_DATA = PDFsets.index
+# TODO: Make this automatically somehow?
+# dist_pkgdata_DATA = pdfsets.index
+
+doxy:
+	(cd doc && make doxy)
 
 ## Remove temporary program generated by AC compiler tests
 mostlyclean-local:
