@@ -8,6 +8,8 @@ LHAPDF6 TODO list
 NOW
 ---
 
+- Eliminate remaining Doxygen warnings and add "make doxy" target
+
 - Fix and test numerical and analytic alpha_s running
    The ODE solver needs serious optimisation, and numerically the results look
    dubious for both the analytic and ODE versions
@@ -22,16 +24,11 @@ NOW
    old and new LHAPDF, and finally compare the files line-by-line, with
    pulls/ratios to the "old" LHAPDF as the reference.
 
-- Eliminate remaining Doxygen warnings
-
 
 NEXT
 ----
 
 - Tidy up DESIGN document
-
-- Add Boost and yaml-cpp detection and path-passing to build system
-   Can yaml-cpp be kept completely internal and bundled?
 
 - Strip file extensions and deal specially with CTEQ6L1 in LHAGLUE
    The old LHAPDF set was misnamed as CTEQ6ll (two L's). Need some backward
