@@ -11,7 +11,7 @@ if ENABLE_LHAGLUE
   libLHAPDF_la_SOURCES += LHAGlue.cc
 endif
 
-BOOSTDIR=/usr # TODO: determine this and YAMLDIR in configure.ac
-libLHAPDF_la_LDFLAGS = -L$(prefix)/lib -L$(BOOSTDIR)/lib -export-dynamic
+libLHAPDF_la_CPPFLAGS = $(AM_CPPFLAGS) $(BOOST_CPPFLAGS) $(YAMLCPP_CPPFLAGS)
+libLHAPDF_la_LDFLAGS = $(AM_LDFLAGS) -L$(prefix)/lib $(BOOST_LDFLAGS) $(YAMLCPP_LDFLAGS) -export-dynamic
 libLHAPDF_la_LIBADD = -lboost_filesystem -lboost_system -lyaml-cpp
 # TODO: How to make the Boost libs auto-chain to libs linking against LHAPDF?
